assets/scss/pages/_product-detail.scss
// 產品詳情頁面，記得全部改成SCSS

.product-row {
  display: flex;
  flex-wrap: wrap;
  margin-left: -4px;
  margin-right: -4px;
}
.product-col {
  width: calc(100% / 12 * 6);
  padding-right: 4px;
  padding-left: 4px;
}

.del-price {
  font-size: 14px;
  font-weight: 400;
  color: $neutral-500;
  padding-left: 8px;
}
.product-color {
  width: 64px;
  text-align: center;
  color: $neutral-600;
}
.btn-product-size {
  border: 1px solid $neutral-300;
  width: 160px;
}

.btn-product-size.active,
.btn-product-size:hover {
  border-color: $neutral-900;
}
.product-action {
  gap: 8px;
}

.product-action .btn {
  width: 50%;
}
.product-info-title {
  font-weight: 500;
}
.product-info-item p {
  color: $neutral-600;
}
.product-info-item {
  border-bottom: 1px solid $neutral-300;
}
footer {
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  text-align: center;
  text-align: center;
}

@media (max-width: 768px) {
  .product-col {
    width: 100%;
    padding-right: 4px;
    padding-left: 4px;
  }
  .product-action .btn-dark {
    width: 100%;
  }
  .product-action .btn-light {
    width: auto;
    margin-left: auto;
  }
  .mightLike {
    max-width: 300px;
    height: auto;
  }
  .container .py-48 .row {
    flex-wrap: nowrap;
    overflow-x: hidden;
  }
}

